--- a/views/admin/edit-products.pug
+++ b/views/admin/edit-products.pug
@@ -31,7 +31,7 @@ block content
                                                     label(class="pl-4 text-mono font-medium" for="description") Description
                                                     textarea(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono font-medium" placeholder="type here..." rows="2" name="description" id="description") #{desc}
                                     
-
+                                    input(type="hidden" name="_csrf" value=csrfToken)
                                     button(class="font-mono font-semibold" type="submit")
                                         span(class="block box-content rounded-md bg-gray-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-gray-700 hover:text-slate-50 hover:shadow-xl") UPDATE
     
@@ -61,6 +61,6 @@ block content
                                                     label(class="pl-4 text-mono font-medium" for="description") Description
                                                     textarea(class="ring-2 ring-gray-300 rounded-md pl-4 text-mono font-medium" placeholder="type here..." rows="2" name="description" id="description")
                                     
-
+                                    input(type="hidden" name="_csrf" value=csrfToken)
                                     button(class="font-mono font-semibold" type="submit")
                                         span(class="block box-content rounded-md bg-gray-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-gray-700 hover:text-slate-50 hover:shadow-xl") ADD
