--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -21,6 +21,7 @@ block content
                                     a(href='/admin/edit-products/'+id+'?edit=true' class="bg-gray-700 h-8 w-16 lg:h-12 lg:w-24 mt-64 lg:mt-80 rounded-md drop-shadow-md text-center py-2 lg:rounded-xl lg:drop-shadow-xl font-medium tracking-normal text-slate-50 text-xs lg:text-lg hover:scale-110 hover:bg-slate-50 hover:text-gray-700 hover:ring-2 hover:ring-gray-400") Edit 
                                     form(action="/admin/delete-products" method="POST")
                                         input(type="hidden" name="prod_id" value=id) 
+                                        input(type="hidden" name="_csrf" value=csrfToken)
                                         button(class="bg-gray-700 h-8 w-16 lg:h-12 lg:w-24 mt-64 lg:mt-80 rounded-md drop-shadow-md lg:rounded-xl lg:drop-shadow-xl font-medium tracking-normal text-slate-50 text-xs lg:text-lg hover:scale-110 hover:bg-slate-50 hover:text-gray-700 hover:ring-2 hover:ring-gray-400" type="submit") Delete
             else
                 h1 No Products
