--- a/views/auth/login-form.pug
+++ b/views/auth/login-form.pug
@@ -14,8 +14,12 @@ block content
                                         div(class="flex flex-row items-center gap-6")
                                                         label(class="pl-4 text-mono font-medium" for="password") Password
                                                         input(class="ring-2 ring-gray-300 rounded-md pl-4 -ml-3 text-mono shadow-lg font-medium" placeholder="type here..." type="password" name="password" id="password")
-                                        
+                                                        
+                                    input(type="hidden" name="_csrf" value=csrfToken)
                                     button(class="font-mono font-semibold mx-6" type="submit")
                                         span(class="block box-content rounded-md ring-2 hover:ring-teal-500 bg-gray-200 shadow-lg h-ful w-full px-1 hover:scale-105 hover:bg-gray-700 hover:text-slate-50 hover:shadow-xl") LOGIN
-                                    
+                                if errorMessage
+                                        div(class="block box-content text-center bg-red-200 mt-10 h-9/12 w-11/12 shadow-xl rounded-sm ring-2 ring-red-400")
+                                            p(class="text-xs md:text-sm font-mono text-gray-800") #{errorMessage}
+
                                 
