--- a/views/layouts/cat-form.pug
+++ b/views/layouts/cat-form.pug
@@ -1,4 +1,5 @@
 form(action="/cart" method="POST")
  - var productID = product._id  
                                 input(type="hidden" name="productID" value=productID)
+                                input(type="hidden" name="_csrf" value=csrfToken)
                                 button(class="bg-gray-700 h-8 w-16 lg:h-12 lg:w-24 mt-64 lg:mt-80 rounded-md drop-shadow-md lg:rounded-xl lg:drop-shadow-xl font-medium tracking-tight text-slate-50 text-xs lg:text-lg hover:scale-110 hover:bg-slate-50 hover:text-gray-700 hover:ring-2 hover:ring-gray-400" type="submit") Add to Cart
